@@ -4,7 +4,7 @@
   Example:
 
   ```shell
-  clojure -M -m etaoin.ide.main -d firefox -p '{:port 8888 :args [\"--no-sandbox\"]}' -f /path/to/script.side
+  clojure -M -m etaoin.ide.main -d firefox -p '{:port 8888}' -f /path/to/script.side
   ```
 
   See the [User Guide](/doc/01-user-guide.adoc#selenium-ide-cli) for more info.
@@ -63,7 +63,7 @@ This is a CLI interface for running Selenium IDE files.
 Usage examples:
 
 ;; from clojure
-clojure -M -m etaoin.ide.main -d firefox -p '{:port 8888 :args [\"--no-sandbox\"]}' -r ide/test.side
+clojure -M -m etaoin.ide.main -d firefox -p '{:port 8888}' -r ide/test.side
 
 ;; from a jar
 java -cp .../poject.jar -m etaoin.ide.main -d firefox -p '{:port 8888}' -f ide/test.side
